gap col2 fixed

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -409,7 +409,10 @@ footer ul {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  gap: 30px;
+}
+
+footer li:nth-of-type(2) {
+  margin: 0 30px 0 30px;
 }
 
 /* Style Copyright mark*/
@@ -753,7 +756,6 @@ a {
       padding-bottom: 0px;
       display: flex;
       flex-direction: row;
-      gap: 64px;
   }
   
   .col1,.col2, .col3 {
@@ -768,7 +770,11 @@ a {
       vertical-align: top;
   }
   
-  
+  .col2 {
+    margin: 0 64px 0 64px;
+  }
+
+
   .col3 {
     display: flex;
   }
